[gd_scene load_steps=11 format=3 uid="uid://dwrhokfm6305j"]

[ext_resource type="Script" uid="uid://b8blq4ykfu3ka" path="res://scripts/game.gd" id="1_uwrxv"]
[ext_resource type="PackedScene" uid="uid://v32thjca6t4p" path="res://scenes/player.tscn" id="2_yqjtg"]
[ext_resource type="Texture2D" uid="uid://7eegsu47cusm" path="res://assets/textures/Area.png" id="3_lnu2h"]
[ext_resource type="PackedScene" uid="uid://dnnlja84venoh" path="res://scenes/shiho.tscn" id="4_lbhrr"]
[ext_resource type="Theme" uid="uid://bcm4ppy66ca6p" path="res://assets/styles/Theme.tres" id="5_iywne"]

[sub_resource type="Animation" id="Animation_iywne"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("TopLabel:visible_ratio")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [1.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("TopLabel:text")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": ["You won!"]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Results:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Results/Center:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Shiho:modulate")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("Shiho:rotation")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="Animation" id="Animation_lbhrr"]
resource_name = "easy"
length = 7.5
step = 0.25
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("TopLabel:visible_ratio")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 2, 6, 7.5),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [0.0, 1.0, 1.0, 0.0]
}

[sub_resource type="Animation" id="Animation_p57ef"]
resource_name = "win"
length = 4.0
step = 0.125
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("TopLabel:visible_ratio")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5, 2.5, 3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [0.0, 1.0, 1.0, 0.0]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(3),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"set_results"
}]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("TopLabel:text")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": ["You won!"]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Results:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(3),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Results/Center:modulate")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(3, 4),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("Shiho:modulate")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0, 0.5, 1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(1, 0, 0, 1), Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("Shiho:rotation")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, 1.5707963267948966]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_iywne"]
_data = {
&"RESET": SubResource("Animation_iywne"),
&"difficulty": SubResource("Animation_lbhrr"),
&"win": SubResource("Animation_p57ef")
}

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_lbhrr"]
bg_color = Color(0, 0, 0, 1)

[node name="Game" type="Node2D"]
texture_filter = 1
script = ExtResource("1_uwrxv")

[node name="Lighting" type="ColorRect" parent="."]
z_index = -1
offset_left = 56.0
offset_right = 264.0
offset_bottom = 240.0
color = Color(1, 0, 0, 1)
metadata/_edit_use_anchors_ = true

[node name="LeftCover" type="ColorRect" parent="."]
visible = false
z_index = 1
offset_right = 56.0
offset_bottom = 240.0
color = Color(0, 0, 0, 1)
metadata/_edit_use_anchors_ = true

[node name="RightCover" type="ColorRect" parent="."]
visible = false
z_index = 1
offset_left = 264.0
offset_right = 320.0
offset_bottom = 240.0
color = Color(0, 0, 0, 1)
metadata/_edit_use_anchors_ = true

[node name="Area" type="Sprite2D" parent="."]
z_index = -1
position = Vector2(160, 120)
texture = ExtResource("3_lnu2h")

[node name="Player" parent="." instance=ExtResource("2_yqjtg")]
position = Vector2(160, 180)

[node name="Shiho" parent="." instance=ExtResource("4_lbhrr")]
position = Vector2(160, 30)

[node name="TopLabel" type="Label" parent="."]
z_index = 1
offset_left = 64.0
offset_top = 8.0
offset_right = 256.0
offset_bottom = 128.0
theme = ExtResource("5_iywne")
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_y = 0
theme_override_constants/outline_size = 4
theme_override_font_sizes/font_size = 12
text = "You won!"
horizontal_alignment = 1
vertical_alignment = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_iywne")
}

[node name="Results" type="CanvasLayer" parent="."]
visible = false

[node name="Center" type="CenterContainer" parent="Results"]
texture_filter = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("5_iywne")

[node name="Panel" type="PanelContainer" parent="Results/Center"]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_lbhrr")

[node name="Margin" type="MarginContainer" parent="Results/Center/Panel"]
layout_mode = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8

[node name="VBox" type="VBoxContainer" parent="Results/Center/Panel/Margin"]
layout_mode = 2

[node name="Difficulty" type="Label" parent="Results/Center/Panel/Margin/VBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 12
text = "Difficulty: Normal"

[node name="Parries" type="Label" parent="Results/Center/Panel/Margin/VBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 12
text = "Parries: 0"

[node name="Deathbombs" type="Label" parent="Results/Center/Panel/Margin/VBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 12
text = "Death parries: 0"

[node name="Session" type="Label" parent="Results/Center/Panel/Margin/VBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 12
text = "Session length: 0s"

[node name="HSeparator" type="HSeparator" parent="Results/Center/Panel/Margin/VBox"]
layout_mode = 2

[node name="Copy" type="Button" parent="Results/Center/Panel/Margin/VBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 12
text = "Copy to clipboard"

[node name="Escape" type="Label" parent="Results/Center/Panel/Margin/VBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 12
text = "[Escape] to return"
horizontal_alignment = 1

[connection signal="beat" from="Shiho" to="." method="_on_shiho_beat"]
[connection signal="pressed" from="Results/Center/Panel/Margin/VBox/Copy" to="." method="_on_copy_pressed"]
